# LookOutCV

./: .gitignore  LICENSE  README.md  pyproject.toml  to_do.md
classification_tracker/: classification_logger.py  classification_metrics.py
detection/: detection_logger.py
detection_tracker/: detection_logger.py  detection_metrics.py
logger/: logger.py
lookout_cv_logs/test_detection/: test_detection_logs_25408.parquet
metrics/: data_insights.py  metrics.py
tests/: test_data_insights.py  test_detection_logger.py
